--- a/app/scss/components/guess.scss
+++ b/app/scss/components/guess.scss
@@ -15,6 +15,8 @@
         font-size: rem(32);
         font-weight: 200;
     }
+
+
     .correct {
         background-color: hsl(115, 29%, 43%);
     }
@@ -27,4 +29,7 @@
         background-color: hsl(240, 2%, 23%);
     }
    
+    .has-letter {
+        border-color: hsl(0, 0%, 40%);
+    }
  }
