added solution animation and display sub attempts

--- a/app/scss/util/animations.scss
+++ b/app/scss/util/animations.scss
@@ -1,3 +1,5 @@
+@use 'functions' as *;
+
 @keyframes flip-in {
     from {
         transform: rotateX(0deg);
@@ -23,5 +25,22 @@
 
 .flip-out {
     animation: flip-out 250ms;
+    animation-fill-mode: forwards;
+}
+
+@keyframes jump {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(rem(-10));
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
+.jump {
+    animation: jump 250ms;
     animation-fill-mode: forwards;
 }
