--- a/app/scss/components/guess.scss
+++ b/app/scss/components/guess.scss
@@ -5,6 +5,8 @@
     grid-template-columns: repeat(5, 1fr);
     gap: rem(3);
     width: 300px;
+    margin-bottom: rem(10);
+
     &__tile {
         border: rem(2) solid hsl(0, 0%, 26%);
         width: rem(52);
